# proxy

./: .gitignore  README.md
.github/workflows/: ci.yml
CarlaLikeApplication/: .~lock.actions.csv#  FileHandling.hpp  MyCallBack.cpp  MyCallBack.hpp  actions.csv  carla  carla.cpp  sensors.csv
Proxy/: MyCallBack.cpp  MyCallBack.hpp  proxy  proxy.cpp
TargetLikeApplication/: FileHandling.cpp  MyCallBack.cpp  MyCallBack.hpp  actions.csv  sensors.csv  target  target.cpp
carla/: CMakeLists.txt  carla.cpp  carla.hpp  main.cpp
proxy/: CMakeLists.txt  config.cpp  config.hpp  config.ini  main.cpp  proxy.cpp  proxy.hpp
proxy/unitTest/configTest/: CMakeLists.txt  config.cpp  config.hpp  config.ini  configTest_testCases.cpp  configTest_testCases.hpp
proxy/unitTest/configTest/coverageReports/: coverage_report.config.cpp.7e3318e8f3a4fd74493691fee10a7c3b.html  coverage_report.configTest_main.cpp.e1837e8df9e4423c8b1859c3afead693.html  coverage_report.configTest_testCases.cpp.67797c61c9b6983aa6a6c895564afb6e.html  coverage_report.html
proxy/unitTest/proxyTest/: CMakeLists.txt  mockedConfig.hpp  proxy.cpp  proxy.hpp  proxyTest_testCases.cpp  proxyTest_testCases.hpp
proxy/unitTest/proxyTest/coverageReports/: coverage_report.html  coverage_report.proxy.cpp.ececdebe2d560e3a53a93a76f6d0b0f5.html  coverage_report.proxyTest_main.cpp.99e77d7d8e797fab58a171ba91e8966b.html  coverage_report.proxyTest_testCases.cpp.c543a744da04c75d41d02e482bdcfb50.html  coverage_report.proxyTest_testCases.hpp.1c8a715e2abfd4c1851e948db11cbea6.html
rpi/: CMakeLists.txt  main.cpp  rpi.cpp  rpi.hpp
sim/: CMakeLists.txt  filehandling.hpp  main.cpp  sim.cpp  sim.hpp
trgt/: filehandling.cpp  main.cpp  trgt.cpp
